--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,23 +27,11 @@
     <title>Blog Web App</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fjalla+One&display=swap");
-      @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-      body::-webkit-scrollbar {
-        width: 1em;
-      }
-
-      body::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-      }
-
-      body::-webkit-scrollbar-thumb {
-        background-color: darkgrey;
-        outline: 1px solid slategrey;
-      }
+      @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
     </style>
 
-    <style></style>
+    
   </head>
 
   <body>
