--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Blog Web App</title>
+    <title>Blog.com</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fjalla+One&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap");
